public interface NavegadorInternet {

    public boolean adicionarNovaAba();
    public boolean atualizarPagina();
}
