public interface ReprodutorMusical {

    public boolean tocar();
    public boolean pausar();
    public void selecionarMusica(String musica);
}
